--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "flexboxgrid": "^6.3.1",
     "include-media": "^2.0.0",
     "lodash": "^4.17.21",
+    "ngx-valdemort": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
