--- a/package.json
+++ b/package.json
@@ -23,23 +23,32 @@
     "@angular/platform-server": "^17.1.1",
     "@angular/router": "^17.1.0",
     "@angular/ssr": "^17.1.0",
+    "@apollo/client": "^3.0.0",
     "@faker-js/faker": "^8.4.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@ngrx/component-store": "^17.1.0",
     "@ngrx/router-store": "^17.1.0",
     "@ngrx/store": "^17.1.0",
+    "apollo-angular": "^6.0.0",
+    "dotenv": "^16.4.2",
     "express": "^4.18.2",
     "flexboxgrid": "^6.3.1",
+    "graphql": "^16",
     "include-media": "^2.0.0",
     "lodash": "^4.17.21",
+    "ngx-infinite-scroll": "^17.0.0",
+    "ngx-mat-select-search": "^7.0.5",
     "ngx-valdemort": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^17.0.0",
+    "@angular-builders/dev-server": "^7.3.1",
     "@angular-devkit/build-angular": "^17.1.0",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
