--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.1.0",
     "@angular/platform-server": "^17.1.1",
     "@angular/router": "^17.1.0",
-    "@angular/ssr": "^17.1.0",
+    "@angular/ssr": "^17.2.0",
     "@apollo/client": "^3.0.0",
     "@faker-js/faker": "^8.4.0",
     "@fortawesome/angular-fontawesome": "^0.14.1",
@@ -44,6 +44,7 @@
     "ngx-valdemort": "^11.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "tslog": "^4.9.2",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
